# CCTag

./: .clang-format  .gitignore  .gitmodules  .travis.yml  BUILD.md  CHANGES.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Dockerfile_deps  INSTALL.md  MAC-README.txt  OpenCV-2.4.10-mac-fixes.patch  README.md  appveyor.yml  conanfile.py  configure  configure-griff  configure_example  detection.sh  integration.sh  mpg-2014-20.cmake  mpg-2014-20.cmake.example
src/: CMakeLists.txt
src/applications/: CMakeLists.txt
src/applications/detection/: CmdLine.cpp  CmdLine.hpp  main.cpp
src/applications/regression/: Detection.h  Regression.cpp  Regression.h  TestLog.cpp  TestLog.h  TestRunner.cpp  TestRunner.h  main.cpp
src/applications/simulation/: main.cpp
src/applications/test/: testMemoryPool.cpp
src/boostLapackExtension/: ggev.hpp  lapack_add.h  lapack_names.h
src/cctag/: Bresenham.cpp  Bresenham.hpp  CCTag.cpp  CCTag.hpp  CCTagFlowComponent.cpp  CCTagFlowComponent.hpp  CCTagMarkersBank.cpp  CCTagMarkersBank.hpp  Candidate.cpp  Candidate.hpp  Canny.cpp  Canny.hpp  Colors.hpp  CvDraw.cpp  CvDraw.hpp  DataSerialization.cpp  DataSerialization.hpp  Detection.cpp  Detection.hpp  EdgePoint.cpp  EdgePoint.hpp  EllipseFittingWithGradient.cpp  EllipseGrowing.cpp  EllipseGrowing.hpp  FileDebug.cpp  FileDebug.hpp  Fitting.cpp  Fitting.hpp  Global.hpp  GrayConversion.hpp  HomographyComputation.cpp  HomographyComputation.hpp  ICCTag.cpp  ICCTag.hpp  IMarker.cpp  IMarker.hpp  IOrientedMarker.cpp  IOrientedMarker.hpp  Identification.cpp  Identification.hpp  (+102 more)
src/cctag/algebra/: Determinant.hpp  Eig.hpp  Invert.hpp  Norm.hpp  Svd.hpp  Svd.tcc  determinant.hpp  eig.hpp  ggev.hpp  invert.hpp  lange.hpp  lapack.hpp  lapack_add.h  norm.hpp  svd.hpp  svd.tcc
src/cctag/boostCv/: cvImage.hpp  cvMat.hpp
src/cctag/cuda/: assist.cu  assist.h  cctag_cuda_runtime.h  clamp.h  cmp_list.cu  cmp_list.h  debug_image.cu  debug_image.h  debug_is_on_edge.cu  debug_is_on_edge.h  debug_macros.cpp  debug_macros.hpp  device_prop.cpp  device_prop.hpp  edge_list.h  frame.cu  frame.h  frame_01_tex.cu  frame_02_gaussian.cu  frame_03_magmap.cu  frame_04_hyst.cu  frame_05_thin.cu  frame_06_graddesc.cu  frame_07_vote.cu  frame_07_vote.h  frame_07a_vote_line.cu  frame_07b_vote_sort_uniq_dp.cu  frame_07b_vote_sort_uniq_nodp.cu  frame_07b_vote_sort_uniq_thrust.cu  frame_07c_eval.cu  frame_07d_vote_if.cu  frame_07e_download.cu  frame_alloc.cu  frame_debug.cu  frame_export.cu  framemeta.cu  framemeta.h  frameparam.cu  frameparam.h  geom_ellipse.cu  (+21 more)
src/cctag/detection/: main.cpp
src/cctag/filter/: cvRecode.cpp  cvRecode.hpp  thinning.cpp  thinning.hpp
src/cctag/geometry/: .Ellipse.cpp.swp  2DTransform.cpp  2DTransform.hpp  Cercle.cpp  Cercle.hpp  Circle.cpp  Circle.hpp  Distance.cpp  Distance.hpp  Ellipse.cpp  Ellipse.hpp  EllipseFromPoints.cpp  EllipseFromPoints.hpp  Point.hpp  distance.hpp  ellipseFromPoints.cpp  ellipseFromPoints.hpp  point.hpp
src/cctag/nocuda/: recode.cpp  recode.hpp  resize.cpp  resize.hpp
src/cctag/optimization/: ImageCenterOptimizer.cpp  ImageCenterOptimizer.hpp  ImageCenterOptimizerCeres.cpp  ImageCenterOptimizerCeres.hpp  LMImageCenterOptimizer.cpp  LMImageCenterOptimizer.hpp  conditioner.cpp  conditioner.hpp
src/cctag/progBase/: Allocator.cpp  Allocator.hpp  IMemoryPool.cpp  IMemoryPool.hpp  MemoryPool.cpp  MemoryPool.hpp  backtrace.hpp  boost_error_info_sstream.hpp  compatibility.hpp  exceptions.hpp
src/cctag/statistic/: statistic.cpp  statistic.hpp
src/cctag/test/: CMakeLists.txt  fitEllipse.cpp
src/cctag/toolbox/: bresenham.cpp  bresenham.hpp  gilTools.hpp
src/cctag/utils/: Accum.cpp  Accum.hpp  Allocator.cpp  Allocator.hpp  Backtrace.cpp  Backtrace.hpp  Debug.hpp  Defines.hpp  Exceptions.cpp  Exceptions.hpp  FTText.cpp  FTText.hpp  FileDebug.cpp  FileDebug.hpp  LogTime.cpp  LogTime.hpp  Release.hpp  Singleton.hpp  System.hpp  Talk.cpp  Talk.hpp  VisualDebug.cpp  VisualDebug.hpp  backtrace.cpp  compatibility.hpp  exceptions.cpp  exceptions.hpp  pcg_extras.hpp  pcg_random.hpp  pcg_uint128.hpp
src/cctag/viewGeometry/: 2DTransform.cpp  2DTransform.hpp  homography.cpp  homography.hpp
src/cuda/: assist.h  cmp_list.cu  cmp_list.h  cuda_edge_point.cu  cuda_edge_point.h  debug_image.cu  debug_image.h  debug_is_on_edge.cu  debug_is_on_edge.h  debug_macros.cpp  debug_macros.hpp  device_prop.cpp  device_prop.hpp  edge_list.h  frame.cu  frame.h  frame_01_tex.cu  frame_02_gaussian.cu  frame_03_magmap.cu  frame_04_hyst.cu  frame_05_thin.cu  frame_06_graddesc.cu  frame_07_vote.cu  frame_07_vote.h  frame_07_vote_if.cu  frame_07_vote_line.cu  frame_07_vote_sort_nodp.cu  frame_07_vote_sort_uniq_dp.cu  frame_07_vote_sort_uniq_nodp.cu  frame_07_vote_uniq_nodp.cu  frame_07a_vote_line.cu  frame_07b_vote_sort_uniq_dp.cu  frame_07b_vote_sort_uniq_nodp.cu  frame_07c_eval.cu  frame_07d_vote_if.cu  frame_07e_download.cu  frame_11_identify.cu  frame_alloc.cu  frame_apply.cu  frame_debug.cu  (+47 more)
src/cuda/Deprecated/: frame_hyst_oldcode.h  keep_time.hpp
src/openMVG/image/: image_container.hpp  pixel_types.hpp  sample.hpp
src/openMVG/numeric/: numeric.h
src/playground/: cuda-any.cu  exclusive_upper_triangle.cc  pgmdiff.cc  search_feat_in_tree.cc  sorttest.cu  thin-proto.cu
src/playground/CudaUnique/: Makefile  assist.h  d_block_prefixsum.h  d_dev_selectop.h  d_dev_unique.h  d_warp_prefixsum.h  dev.cu  device_prop.cu  device_prop.h  sweep.cu
src/playground/FindCurves/: Makefile  curve.cu
src/scripts/: t1.plhtml  timeline.pl
src/terry/: basic_colors.hpp  channel.hpp  channel_view.hpp  clamp.hpp  color.hpp  copy.hpp  globals.hpp  math.hpp  pixel_proxy.hpp  typedefs.hpp
src/terry/algorithm/: for_each.hpp  pixel_by_channel.hpp  static_channel_recursion.hpp  transform_pixels.hpp  transform_pixels_progress.hpp
src/terry/color/: gradient.hpp  invert.hpp  norm.hpp  transfer.hpp
src/terry/colorspace/: colorspace.hpp  gradation.hpp  layout.hpp  primaries.hpp  temperature.hpp
src/terry/draw/: fill.hpp
src/terry/filter/: canny.hpp  convolve.hpp  correlate.hpp  floodFill.hpp  gaussianKernel.hpp  (+4 more)
(+150 files in other folders)
